feat: refactor data picker name (breaking)

--- a/demo/app/demos/flip-switch/demo.component.html
+++ b/demo/app/demos/flip-switch/demo.component.html
@@ -5,3 +5,6 @@ Current value: {{value1}}
 <h3>With custom labels</h3>
 <vcl-flip-switch onLabel="Yes" offLabel="No" [(value)]="value2"></vcl-flip-switch><br>
 Current value: {{value2}}
+
+<h3>Disabled</h3>
+<vcl-flip-switch onLabel="Yes" offLabel="No" [(value)]="value2" [disabled]="true"></vcl-flip-switch><br>
