--- a/lib/ng-vcl/src/jss-form/jss-form.component.scss
+++ b/lib/ng-vcl/src/jss-form/jss-form.component.scss
@@ -5,7 +5,7 @@ vcl-jss-form-button-group,
 vcl-jss-form-button,
 vcl-jss-form-buttons,
 vcl-jss-form-checkbox,
-vcl-jss-form-datepicker,
+vcl-jss-form-date-picker,
 vcl-jss-form-file-input,
 vcl-jss-form-hidden,
 vcl-jss-form-input,
