--- a/demo/styles/demo.scss
+++ b/demo/styles/demo.scss
@@ -7,6 +7,7 @@ html, body {
 
 body {
   margin: 0;
+  overflow: hidden;
 }
 
 header {
@@ -24,7 +25,11 @@ header {
 }
 
 .docContent {
-  height: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
 .docMetadata {
@@ -61,11 +66,6 @@ header {
   overflow: auto;
   position: relative;
   transform: translateZ(0);
-}
-
-.docContent {
-  padding-right: 15px;
-  padding-left: 15px;
 }
 
 .docPart {
