fix: limit select dropdown height feat: add spinner element

--- a/lib/ng-vcl/src/select/select.component.scss
+++ b/lib/ng-vcl/src/select/select.component.scss
@@ -7,10 +7,11 @@ vcl-select {
   &.pop-over {
     padding: 0;
   }
-  
+
   .select-list {
     border: 0;
     margin-bottom: 0;
+    max-height: 100%;
   }
 }
 
