chore: fix temos

--- a/demo/app/demos/autocomplete/demo.component.html
+++ b/demo/app/demos/autocomplete/demo.component.html
@@ -24,6 +24,13 @@
     <vcl-select-list-item value="The United Kingdom">
       The United Kingdom of Great Britain and Northern Ireland
     </vcl-select-list-item>
+    <vcl-select-list-header>Amercia</vcl-select-list-header>
+    <vcl-select-list-item value="United States of America">
+      United States of America
+    </vcl-select-list-item>
+    <vcl-select-list-item value="Brazil">
+      Brazil
+    </vcl-select-list-item>
     <vcl-select-list-header>Asia</vcl-select-list-header>
     <vcl-select-list-item value="Japan">
       Japan
