--- a/demo/app/demos/checkbox/demo.component.html
+++ b/demo/app/demos/checkbox/demo.component.html
@@ -1,12 +1,12 @@
 <h3>Horizontal</h3>
-<vcl-checkbox [(checked)]="value1">Check 1! </vcl-checkbox>
-<vcl-checkbox [(checked)]="value2">Check 2! </vcl-checkbox>
-<vcl-checkbox [(checked)]="value3" [disabled]=true>Check 3! (disabled) </vcl-checkbox>
+<vcl-checkbox [(checked)]="value1">Check 1</vcl-checkbox>
+<vcl-checkbox [(checked)]="value2">Check 2</vcl-checkbox>
+<vcl-checkbox [(checked)]="value3" [disabled]=true>Check 3 (disabled) </vcl-checkbox>
 
 <h3>Vertical</h3>
 
 <div class="col">
-  <vcl-checkbox [(checked)]="value1">Check 1! </vcl-checkbox>
-  <vcl-checkbox [(checked)]="value2">Check 2! </vcl-checkbox>
-  <vcl-checkbox [(checked)]="value3" [disabled]=true>Check 3! (disabled) </vcl-checkbox>
+  <vcl-checkbox [(checked)]="value1">Check 1</vcl-checkbox>
+  <vcl-checkbox [(checked)]="value2">Check 2</vcl-checkbox>
+  <vcl-checkbox [(checked)]="value3" [disabled]=true>Check 3 (disabled) </vcl-checkbox>
 </div>
