--- a/demo/app/demos/form-control-group/demo.component.html
+++ b/demo/app/demos/form-control-group/demo.component.html
@@ -25,7 +25,7 @@
 
   <vcl-form-control-group>
     <vcl-label>Description</vcl-label>
-    <vcl-input-field>
+    <vcl-input-field class="auto-height">
       <textarea vclInput formControlName="description" placeholder="Description of the hero" [autogrow]="true" [minRows]="3" [maxRows]="10"></textarea>
     </vcl-input-field>
   </vcl-form-control-group>
