--- a/demo/app/demos/input/demo.component.html
+++ b/demo/app/demos/input/demo.component.html
@@ -39,21 +39,21 @@
 
 <vcl-form-control-group>
   <vcl-label>textarea</vcl-label>
-  <vcl-input-field>
+  <vcl-input-field class="auto-height">
     <textarea vclInput rows="3"></textarea>
   </vcl-input-field>
 </vcl-form-control-group>
 
 <vcl-form-control-group>
   <vcl-label>Autogrowing textarea</vcl-label>
-  <vcl-input-field>
+  <vcl-input-field class="auto-height">
     <textarea vclInput [autogrow]="true" [minRows]="5" [maxRows]="10"></textarea>
   </vcl-input-field>
 </vcl-form-control-group>
 
 <vcl-form-control-group>
   <vcl-label>Disabled textarea</vcl-label>
-  <vcl-input-field>
+  <vcl-input-field class="auto-height">
     <textarea vclInput [disabled]="true"></textarea>
   </vcl-input-field>
 </vcl-form-control-group>
