--- a/demo/app/demos/select/demo.component.html
+++ b/demo/app/demos/select/demo.component.html
@@ -4,27 +4,34 @@
   <vcl-select>
     <vcl-select-list [(value)]="value1">
       <vcl-select-list-header>Europe</vcl-select-list-header>
-      <vcl-select-list-item value="gr">
+      <vcl-select-list-item value="Greece">
         Greece
         <vcl-sub-label>A country in southeastern Europe with thousands of islands throughout the Aegean and Ionian seas</vcl-sub-label>
       </vcl-select-list-item>
-      <vcl-select-list-item value="fr">
+      <vcl-select-list-item value="France">
         France
       </vcl-select-list-item>
-      <vcl-select-list-item value="de">
+      <vcl-select-list-item value="Germany">
         Germany
       </vcl-select-list-item>
-      <vcl-select-list-item value="gb" label="United Kingdom">
+      <vcl-select-list-item value="The United Kingdom">
         The United Kingdom of Great Britain and Northern Ireland
       </vcl-select-list-item>
+      <vcl-select-list-header>Amercia</vcl-select-list-header>
+      <vcl-select-list-item value="United States of America">
+        United States of America
+      </vcl-select-list-item>
+      <vcl-select-list-item value="Brazil">
+        Brazil
+      </vcl-select-list-item>
       <vcl-select-list-header>Asia</vcl-select-list-header>
-      <vcl-select-list-item value="jp">
+      <vcl-select-list-item value="Japan">
         Japan
       </vcl-select-list-item>
-      <vcl-select-list-item value="cn">
+      <vcl-select-list-item value="China">
         China
       </vcl-select-list-item>
-      <vcl-select-list-item value="th">
+      <vcl-select-list-item value="Thailand">
         Thailand
       </vcl-select-list-item>
     </vcl-select-list>
@@ -39,27 +46,34 @@
   <vcl-select>
     <vcl-select-list [(value)]="value2" selectionMode="multiple">
       <vcl-select-list-header>Europe</vcl-select-list-header>
-      <vcl-select-list-item value="gr">
+      <vcl-select-list-item value="Greece">
         Greece
         <vcl-sub-label>A country in southeastern Europe with thousands of islands throughout the Aegean and Ionian seas</vcl-sub-label>
       </vcl-select-list-item>
-      <vcl-select-list-item value="fr">
+      <vcl-select-list-item value="France">
         France
       </vcl-select-list-item>
-      <vcl-select-list-item value="de">
+      <vcl-select-list-item value="Germany">
         Germany
       </vcl-select-list-item>
-      <vcl-select-list-item value="gb">
+      <vcl-select-list-item value="The United Kingdom">
         The United Kingdom of Great Britain and Northern Ireland
       </vcl-select-list-item>
+      <vcl-select-list-header>Amercia</vcl-select-list-header>
+      <vcl-select-list-item value="United States of America">
+        United States of America
+      </vcl-select-list-item>
+      <vcl-select-list-item value="Brazil">
+        Brazil
+      </vcl-select-list-item>
       <vcl-select-list-header>Asia</vcl-select-list-header>
-      <vcl-select-list-item value="jp">
+      <vcl-select-list-item value="Japan">
         Japan
       </vcl-select-list-item>
-      <vcl-select-list-item value="ch">
+      <vcl-select-list-item value="China">
         China
       </vcl-select-list-item>
-      <vcl-select-list-item value="th">
+      <vcl-select-list-item value="Thailand">
         Thailand
       </vcl-select-list-item>
     </vcl-select-list>
@@ -73,31 +87,35 @@
   <vcl-label>Select country</vcl-label>
   <vcl-select>
     <vcl-select-list [(value)]="value3" [disabled]="true">
-      <vcl-select-list-item label=" - ">
-        None
-      </vcl-select-list-item>
       <vcl-select-list-header>Europe</vcl-select-list-header>
-      <vcl-select-list-item value="gr">
+      <vcl-select-list-item value="Greece">
         Greece
         <vcl-sub-label>A country in southeastern Europe with thousands of islands throughout the Aegean and Ionian seas</vcl-sub-label>
       </vcl-select-list-item>
-      <vcl-select-list-item value="fr">
+      <vcl-select-list-item value="France">
         France
       </vcl-select-list-item>
-      <vcl-select-list-item value="de">
+      <vcl-select-list-item value="Germany">
         Germany
       </vcl-select-list-item>
-      <vcl-select-list-item value="gb" label="United Kingdom">
+      <vcl-select-list-item value="The United Kingdom">
         The United Kingdom of Great Britain and Northern Ireland
       </vcl-select-list-item>
+      <vcl-select-list-header>Amercia</vcl-select-list-header>
+      <vcl-select-list-item value="United States of America">
+        United States of America
+      </vcl-select-list-item>
+      <vcl-select-list-item value="Brazil">
+        Brazil
+      </vcl-select-list-item>
       <vcl-select-list-header>Asia</vcl-select-list-header>
-      <vcl-select-list-item value="jp">
+      <vcl-select-list-item value="Japan">
         Japan
       </vcl-select-list-item>
-      <vcl-select-list-item value="cn">
+      <vcl-select-list-item value="China">
         China
       </vcl-select-list-item>
-      <vcl-select-list-item value="th">
+      <vcl-select-list-item value="Thailand">
         Thailand
       </vcl-select-list-item>
     </vcl-select-list>
@@ -106,36 +124,47 @@
 
 <h3>Select with search</h3>
 <vcl-form-control-group>
-  <vcl-label>Select country</vcl-label>
-  <vcl-select [search]="true" (searchValue)="search = $event">
-    <ng-container empty>
-      No countries found!
-    </ng-container>
-    <vcl-select-list [(value)]="value4">
-      <vcl-select-list-item value="gr">
-        Greece
-        <vcl-sub-label>A country in southeastern Europe with thousands of islands throughout the Aegean and Ionian seas</vcl-sub-label>
-      </vcl-select-list-item>
-      <vcl-select-list-item value="fr">
-        France
-      </vcl-select-list-item>
-      <vcl-select-list-item value="de">
-        Germany
-      </vcl-select-list-item>
-      <vcl-select-list-item value="gb" label="United Kingdom">
-        The United Kingdom of Great Britain and Northern Ireland
-      </vcl-select-list-item>
-      <vcl-select-list-item value="jp">
-        Japan
-      </vcl-select-list-item>
-      <vcl-select-list-item value="cn">
-        China
-      </vcl-select-list-item>
-      <vcl-select-list-item value="th">
-        Thailand
-      </vcl-select-list-item>
-    </vcl-select-list>
-  </vcl-select>
+  <form autocomplete="off">
+    <vcl-label>Select country</vcl-label>
+    <vcl-select [search]="true" (searchValue)="search = $event">
+      <ng-container empty>
+        No countries found!
+      </ng-container>
+      <vcl-select-list [(value)]="value4">
+        <vcl-select-list-header>Europe</vcl-select-list-header>
+        <vcl-select-list-item value="Greece">
+          Greece
+          <vcl-sub-label>A country in southeastern Europe with thousands of islands throughout the Aegean and Ionian seas</vcl-sub-label>
+        </vcl-select-list-item>
+        <vcl-select-list-item value="France">
+          France
+        </vcl-select-list-item>
+        <vcl-select-list-item value="Germany">
+          Germany
+        </vcl-select-list-item>
+        <vcl-select-list-item value="The United Kingdom">
+          The United Kingdom of Great Britain and Northern Ireland
+        </vcl-select-list-item>
+        <vcl-select-list-header>Amercia</vcl-select-list-header>
+        <vcl-select-list-item value="United States of America">
+          United States of America
+        </vcl-select-list-item>
+        <vcl-select-list-item value="Brazil">
+          Brazil
+        </vcl-select-list-item>
+        <vcl-select-list-header>Asia</vcl-select-list-header>
+        <vcl-select-list-item value="Japan">
+          Japan
+        </vcl-select-list-item>
+        <vcl-select-list-item value="China">
+          China
+        </vcl-select-list-item>
+        <vcl-select-list-item value="Thailand">
+          Thailand
+        </vcl-select-list-item>
+      </vcl-select-list>
+    </vcl-select>
+  </form>
 </vcl-form-control-group>
 
 <p> Selected value: {{value4}}</p>
