--- a/lib/ng-vcl/src/select/select.component.html
+++ b/lib/ng-vcl/src/select/select.component.html
@@ -7,6 +7,7 @@
        [class.readonly]="!search"
        class="input app-item"
        role="listbox"
+       autocomplete="off"
        [readonly]="!search"
        (keyup)="inputChange($event)"
        >
