fix allow to add autocomplete on form level for JSS form

--- a/demo/app/demos/jss-form/demo.component.html
+++ b/demo/app/demos/jss-form/demo.component.html
@@ -5,6 +5,7 @@
 
 <vcl-jss-form
   style="max-width: 40em;"
+  autocomplete="off"
   #heroForm="vclJssForm"
   [schema]="heroSchema"
   (formSubmit)="onSubmit()"
