--- a/lib/ng-vcl/src/spinner/spinner.component.html
+++ b/lib/ng-vcl/src/spinner/spinner.component.html
@@ -1,8 +1,8 @@
-<div class="button-group" [class.vertical]="direction === 'vertical'">
-  <button vcl-button type="button" (click)="this.writeValue(this.value+1)">
-    <vcl-icon icon="fas:chevron-up"></vcl-icon>
+<div class="button-group spinner" [class.vertical]="orientation === 'vertical'" [class.flex]="orientation === 'vertical'" [class.col]="orientation === 'vertical'">
+  <button vcl-button type="button" class="transparent" (click)="this.writeValue(this.value+1)">
+    <vcl-icon icon="vcl:arrow-up"></vcl-icon>
   </button>
-  <button vcl-button type="button" (click)="this.writeValue(this.value-1)">
-    <vcl-icon icon="fas:chevron-down"></vcl-icon>
+  <button vcl-button type="button" class="transparent" (click)="this.writeValue(this.value-1)">
+    <vcl-icon icon="vcl:arrow-down"></vcl-icon>
   </button>
 </div>
