fix: Date parsing and formatting in date adapter

--- a/demo/app/demos/date-picker/demo.component.html
+++ b/demo/app/demos/date-picker/demo.component.html
@@ -9,6 +9,11 @@
 </vcl-form-control-group>
 
 <vcl-form-control-group>
+  <vcl-label>Month Picker with custom Display Format</vcl-label>
+  <vcl-date-picker [placeholder]="monthPattern" [(ngModel)]="monthAlt" pick="month" displayFormat="yearMonthLong"></vcl-date-picker>
+</vcl-form-control-group>
+
+<vcl-form-control-group>
   <vcl-label>Time Picker</vcl-label>
   <vcl-date-picker [placeholder]="timePattern" [(ngModel)]="time" pick="time"></vcl-date-picker>
 </vcl-form-control-group>
