chore: remove deprecated vcl-select-list-label

--- a/demo/app/demos/select/demo.component.html
+++ b/demo/app/demos/select/demo.component.html
@@ -48,10 +48,11 @@
       <vcl-select-list-header>Europe</vcl-select-list-header>
       <vcl-select-list-item value="Greece">
         Greece
-        <vcl-sub-label>A country in southeastern Europe with thousands of islands throughout the Aegean and Ionian seas</vcl-sub-label>
+        <vcl-sub-label>Sub-Label: A country in southeastern Europe with thousands of islands throughout the Aegean and Ionian seas</vcl-sub-label>
       </vcl-select-list-item>
       <vcl-select-list-item value="France">
         France
+        <vcl-sub-label>Sub-Label</vcl-sub-label>
       </vcl-select-list-item>
       <vcl-select-list-item value="Germany">
         Germany
@@ -90,10 +91,11 @@
       <vcl-select-list-header>Europe</vcl-select-list-header>
       <vcl-select-list-item value="Greece">
         Greece
-        <vcl-sub-label>A country in southeastern Europe with thousands of islands throughout the Aegean and Ionian seas</vcl-sub-label>
+        <vcl-sub-label>Sub-Label: A country in southeastern Europe with thousands of islands throughout the Aegean and Ionian seas</vcl-sub-label>
       </vcl-select-list-item>
       <vcl-select-list-item value="France">
         France
+        <vcl-sub-label>Sub-Label</vcl-sub-label>
       </vcl-select-list-item>
       <vcl-select-list-item value="Germany">
         Germany
@@ -134,10 +136,11 @@
         <vcl-select-list-header>Europe</vcl-select-list-header>
         <vcl-select-list-item value="Greece">
           Greece
-          <vcl-sub-label>A country in southeastern Europe with thousands of islands throughout the Aegean and Ionian seas</vcl-sub-label>
+          <vcl-sub-label>Sub-Label: A country in southeastern Europe with thousands of islands throughout the Aegean and Ionian seas</vcl-sub-label>
         </vcl-select-list-item>
         <vcl-select-list-item value="France">
           France
+          <vcl-sub-label>Sub-Label</vcl-sub-label>
         </vcl-select-list-item>
         <vcl-select-list-item value="Germany">
           Germany
