fix: replace backdrops with offclick

--- a/lib/ng-vcl/src/select/select.component.html
+++ b/lib/ng-vcl/src/select/select.component.html
@@ -21,7 +21,7 @@
 </button>
 
 <ng-template>
-  <div style="width: 100%">
+  <div style="width: 100%" (vclOffClick)="close()">
     <ng-content></ng-content>
     <ng-container *ngIf="listEmpty">
       <ng-content select="[empty]"></ng-content>
