--- a/lib/ng-vcl/src/date-picker/date-picker.component.html
+++ b/lib/ng-vcl/src/date-picker/date-picker.component.html
@@ -1,4 +1,4 @@
-<input #input 
+<input #input
        vclInput
        [disabled]="isDisabled"
        [placeholder]="placeholder || ''"
@@ -19,10 +19,11 @@
 </button>
 
 <ng-template>
-  <vcl-calendar [selectionMode]="pick" 
+  <vcl-calendar [selectionMode]="pick"
                 [showWeekOfTheYear]="showWeekOfTheYear"
                 [dateModifiers]="dateModifier"
                 [viewDate]="viewDate"
-                [value]="value"  
-                (valueChange)="onSelect($event)"></vcl-calendar>
+                [value]="value"
+                (valueChange)="onSelect($event)"
+                (vclOffClick)="close()"></vcl-calendar>
 </ng-template>
