Fix the demo page layout

--- a/demo/app/components/app/app.component.html
+++ b/demo/app/components/app/app.component.html
@@ -1,71 +1,120 @@
-<div class="docMain">
-    <header class="application-header row center justify-between">
-      <button vcl-button square class="transparent" *ngIf="xsmall" (click)="drawer.toggle()">
-        <vcl-icon icon="vcl:menu" class="scale180p"></vcl-icon>
-      </button>
-      <div role="banner">
-        <a href="#" class="row center">
-          <img class="responsive-image logo" role="presentation" src="https://cdn.jsdelivr.net/gh/vcl/ng-vcl/gfx/angular_vcl_logo_square.png">
-          <h1 *ngIf="!xsmall" class="app-name">Angular VCL Demo Browser (v{{version}}<span *ngIf="gitBranch"> {{gitBranch}}</span>)</h1>
-        </a>
-      </div>
-      <div class="github"><a href="https://github.com/vcl/ng-vcl" target="_blank" title="to Github">
-        <span class="icon fab fa-github fa-3x"></span> </a>
-      </div>
-    </header>
-    <vcl-drawer-container class="content-area flex">
-      <vcl-drawer [opened]="xsmall ? false : true" class="col docNav"  #drawer="vclDrawer" [mode]="!xsmall ? 'side' : 'over'">
-        <vcl-input-field class="no-border searchInput">
-          <vcl-icon icon="fas:search"></vcl-icon>
-          <input vclInput 
-            #searchInput 
-            (keyup)="search(searchInput.value)"
-            type="search"
-            name="search"
-            placeholder="Search Modules"
-            autocomplete="off"
-            autofocus />
-  
-          <button vcl-button *ngIf="searchInput.value"
-            (tap)="searchInput.value = ''; search('')"
-            class="button transparent square appended"
-            icon="fas:times-circle"></button>
-        </vcl-input-field>
-  
-        <vcl-navigation class="scrollable y-on-hover flex">
-          <ng-container *ngIf="searchResults.length; else noSearch">
-            <vcl-navigation-item *ngFor="let searchResult of searchResults" [routerLink]="searchResult.route" routerLinkActive #rla="routerLinkActive" [selected]="rla.isActive">
-              <vcl-navigation-label>{{searchResult.label}}</vcl-navigation-label>
-            </vcl-navigation-item>
-          </ng-container>
-          <ng-template #noSearch>
-            <vcl-navigation-item *ngFor="let item of GROUPED_DEMOS" #navGroupItem="vclNavigationItem">
-              <vcl-navigation-label>
-                <vcl-icogram>
-                  <vcl-icon vclPrepend [icon]="navGroupItem.opened ? 'fas:angle-down' : 'fas:angle-right'"></vcl-icon>
-                  &nbsp;{{item.label}}
-                </vcl-icogram>
-              </vcl-navigation-label>
-              <vcl-navigation *ngIf="item.items">
-                <vcl-navigation-item *ngFor="let subitem of item.items" [routerLink]="subitem.route" routerLinkActive #navItem="vclNavigationItem" #rla="routerLinkActive" [selected]="rla.isActive" (click)="onNavItemClick()">
-                  <vcl-navigation-label>
-                    <vcl-icogram>
-                      {{subitem.label}}
-                      <!-- Router loading animation -->
-                      <ng-container *ngIf="busy$ | async">
-                        <vcl-icon *ngIf="navItem.selected" vclAppend icon="vcl:busy"></vcl-icon>
-                      </ng-container>
-                    </vcl-icogram>
-                  </vcl-navigation-label>
-                </vcl-navigation-item>
-              </vcl-navigation>
-            </vcl-navigation-item>
-          </ng-template>
-        </vcl-navigation>
-      </vcl-drawer>
-      <div class="scrollable docContent" vclDrawerContent cdkScrollable> 
-        <router-outlet></router-outlet>
-      </div>
-    </vcl-drawer-container>
+<div class="col app">
+  <header class="application-header row center justify-between">
+    <button
+      vcl-button
+      square
+      class="transparent"
+      *ngIf="xsmall"
+      (click)="drawer.toggle()"
+    >
+      <vcl-icon icon="vcl:menu" class="scale180p"></vcl-icon>
+    </button>
+    <div role="banner">
+      <a href="#" class="row center">
+        <img
+          class="responsive-image logo"
+          role="presentation"
+          src="https://cdn.jsdelivr.net/gh/vcl/ng-vcl/gfx/angular_vcl_logo_square.png"
+        />
+        <h1 *ngIf="!xsmall" class="app-name">
+          Angular VCL Demo Browser (v{{ version
+          }}<span *ngIf="gitBranch"> {{ gitBranch }}</span
+          >)
+        </h1>
+      </a>
+    </div>
+    <div class="github">
+      <a href="https://github.com/vcl/ng-vcl" target="_blank" title="to Github">
+        <span class="icon fab fa-github fa-3x"></span>
+      </a>
+    </div>
+  </header>
+  <div class="content-area flex row">
+    <div class="docNav col">
+      <vcl-input-field class="no-border searchInput">
+        <vcl-icon icon="fas:search"></vcl-icon>
+        <input
+          vclInput
+          #searchInput
+          (keyup)="search(searchInput.value)"
+          type="search"
+          name="search"
+          placeholder="Search Modules"
+          autocomplete="off"
+          autofocus
+        />
+
+        <button
+          vcl-button
+          *ngIf="searchInput.value"
+          (tap)="searchInput.value = ''; search('')"
+          class="button transparent square appended"
+          icon="fas:times-circle"
+        ></button>
+      </vcl-input-field>
+
+      <vcl-navigation class="scrollable y-on-hover flex">
+        <ng-container *ngIf="searchResults.length; else noSearch">
+          <vcl-navigation-item
+            *ngFor="let searchResult of searchResults"
+            [routerLink]="searchResult.route"
+            routerLinkActive
+            #rla="routerLinkActive"
+            [selected]="rla.isActive"
+          >
+            <vcl-navigation-label>{{
+              searchResult.label
+            }}</vcl-navigation-label>
+          </vcl-navigation-item>
+        </ng-container>
+        <ng-template #noSearch>
+          <vcl-navigation-item
+            *ngFor="let item of GROUPED_DEMOS"
+            #navGroupItem="vclNavigationItem"
+          >
+            <vcl-navigation-label>
+              <vcl-icogram>
+                <vcl-icon
+                  vclPrepend
+                  [icon]="
+                    navGroupItem.opened ? 'fas:angle-down' : 'fas:angle-right'
+                  "
+                ></vcl-icon>
+                &nbsp;{{ item.label }}
+              </vcl-icogram>
+            </vcl-navigation-label>
+            <vcl-navigation *ngIf="item.items">
+              <vcl-navigation-item
+                *ngFor="let subitem of item.items"
+                [routerLink]="subitem.route"
+                routerLinkActive
+                #navItem="vclNavigationItem"
+                #rla="routerLinkActive"
+                [selected]="rla.isActive"
+                (click)="onNavItemClick()"
+              >
+                <vcl-navigation-label>
+                  <vcl-icogram>
+                    {{ subitem.label }}
+                    <!-- Router loading animation -->
+                    <ng-container *ngIf="busy$ | async">
+                      <vcl-icon
+                        *ngIf="navItem.selected"
+                        vclAppend
+                        icon="vcl:busy"
+                      ></vcl-icon>
+                    </ng-container>
+                  </vcl-icogram>
+                </vcl-navigation-label>
+              </vcl-navigation-item>
+            </vcl-navigation>
+          </vcl-navigation-item>
+        </ng-template>
+      </vcl-navigation>
+    </div>
+
+    <div class="docContent flex scrollable">
+      <router-outlet></router-outlet>
+    </div>
   </div>
-  
+</div>
