--- a/demo/app/demos/select/demo.component.html
+++ b/demo/app/demos/select/demo.component.html
@@ -172,3 +172,23 @@
 
 <p> Selected value: {{value4}}</p>
 <p> Search value: {{search}}</p>
+
+<h3>Clearable select</h3>
+<vcl-form-control-group>
+  <vcl-label>Select country</vcl-label>
+  <vcl-select [clearable]="true">
+    <vcl-select-list [(value)]="value5">
+      <vcl-select-list-item value="Greece">
+        Greece
+      </vcl-select-list-item>
+      <vcl-select-list-item value="France">
+        France
+      </vcl-select-list-item>
+      <vcl-select-list-item value="Germany">
+        Germany
+      </vcl-select-list-item>
+    </vcl-select-list>
+  </vcl-select>
+</vcl-form-control-group>
+
+<p> Selected value: {{value5}}</p>
