--- a/demo/app/demos/select/demo.component.html
+++ b/demo/app/demos/select/demo.component.html
@@ -128,7 +128,7 @@
 <vcl-form-control-group>
   <form autocomplete="off">
     <vcl-label>Select country</vcl-label>
-    <vcl-select [search]="true" (searchValue)="search = $event">
+    <vcl-select [search]="true" (searchValue)="search1 = $event">
       <ng-container empty>
         No countries found!
       </ng-container>
@@ -171,13 +171,45 @@
 </vcl-form-control-group>
 
 <p> Selected value: {{value4}}</p>
-<p> Search value: {{search}}</p>
+<p> Search value: {{search1}}</p>
+
+<h3>Select with search (including values)</h3>
+<vcl-form-control-group>
+  <form autocomplete="off">
+    <vcl-label>Select country</vcl-label>
+    <vcl-select [search]="true" (searchValue)="search2 = $event">
+      <ng-container empty>
+        No numbers found!
+      </ng-container>
+      <vcl-select-list [(value)]="value5" [searchValue]="true">
+        <vcl-select-list-item value="1">
+          One
+        </vcl-select-list-item>
+        <vcl-select-list-item value="2">
+          Two
+        </vcl-select-list-item>
+        <vcl-select-list-item value="3">
+          Three
+        </vcl-select-list-item>
+        <vcl-select-list-item value="4">
+          Four
+        </vcl-select-list-item>
+        <vcl-select-list-item value="5">
+          Five
+        </vcl-select-list-item>
+      </vcl-select-list>
+    </vcl-select>
+  </form>
+</vcl-form-control-group>
+
+<p> Selected value: {{value5}}</p>
+<p> Search value: {{search2}}</p>
 
 <h3>Clearable select</h3>
 <vcl-form-control-group>
   <vcl-label>Select country</vcl-label>
   <vcl-select [clearable]="true">
-    <vcl-select-list [(value)]="value5" [disabled]="true">
+    <vcl-select-list [(value)]="value6" [disabled]="true">
       <vcl-select-list-header>Europe</vcl-select-list-header>
       <vcl-select-list-item value="Greece">
         Greece
@@ -214,4 +246,4 @@
   </vcl-select>
 </vcl-form-control-group>
 
-<p> Selected value: {{value5}}</p>
+<p> Selected value: {{value6}}</p>
