fix(select): hide clear button if no value is selected

--- a/demo/app/demos/select/demo.component.html
+++ b/demo/app/demos/select/demo.component.html
@@ -209,7 +209,7 @@
 <vcl-form-control-group>
   <vcl-label>Select country</vcl-label>
   <vcl-select [clearable]="true">
-    <vcl-select-list [(value)]="value6" [disabled]="true">
+    <vcl-select-list [(value)]="value6">
       <vcl-select-list-header>Europe</vcl-select-list-header>
       <vcl-select-list-item value="Greece">
         Greece
