feat(select, icon) Add slot for prepending elements (like icons) to select
- Also add a vcl:search icon to the icons alias

--- a/lib/ng-vcl/src/select/select.component.html
+++ b/lib/ng-vcl/src/select/select.component.html
@@ -1,32 +1,32 @@
-<input #input
-       [placeholder]="placeholder || ''"
-       [value]="inputValue"
-       [attr.tabindex]="-1"
-       [disabled]="isDisabled"
-       [class.disabled]="isDisabled"
-       [class.readonly]="!search"
-       class="input app-item"
-       role="listbox"
-       autocomplete="off"
-       [readonly]="!search"
-       (keyup)="inputChange($event)"
-       >
-<button *ngIf="clearable && inputValue"
-        vcl-button square
-        type="button"
-        tabindex="-1"
-        class="appended"
-        [disabled]="isDisabled"
-        (click)="clearSelection($event)"
+<ng-content select="[prepend]"></ng-content>
+<input
+  #input
+  [placeholder]="placeholder || ''"
+  [value]="inputValue"
+  [attr.tabindex]="-1"
+  [disabled]="isDisabled"
+  [class.disabled]="isDisabled"
+  [class.readonly]="!search"
+  class="input app-item"
+  role="listbox"
+  autocomplete="off"
+  [readonly]="!search"
+  (keyup)="inputChange($event)"
+/>
+<button
+  *ngIf="clearable && inputValue"
+  vcl-button
+  square
+  type="button"
+  tabindex="-1"
+  class="appended"
+  [disabled]="isDisabled"
+  (click)="clearSelection($event)"
 >
   <vcl-icon icon="vcl:close"></vcl-icon>
 </button>
-<button vcl-button square
-        type="button"
-        tabindex="-1"
-        class="appended"
-      >
-      <vcl-icon icon="vcl:arrow-down"></vcl-icon>
+<button vcl-button square type="button" tabindex="-1" class="appended">
+  <vcl-icon icon="vcl:arrow-down"></vcl-icon>
 </button>
 
 <ng-template #innerList>
