feat(select) Add slot to prepending to select's input-field

--- a/demo/app/demos/icon/icons.component.html
+++ b/demo/app/demos/icon/icons.component.html
@@ -28,3 +28,4 @@
 <vcl-icon icon='vcl:calendar'></vcl-icon> vcl:calendar<br>
 <vcl-icon icon='vcl:clock'></vcl-icon> vcl:clock<br>
 <vcl-icon icon='vcl:menu'></vcl-icon> vcl:menu<br>
+<vcl-icon icon="vcl:search"></vcl-icon> vcl:search<br />
